--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "filterfrom"
-version = "0.3.0"
+version = "0.4.0"
 authors = ["blakehawkins"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
@@ -11,5 +11,5 @@ readme = "README.md"
 
 [dependencies]
 oops = "0.1.0"
-paw = "1.0.0"
+structopt = "0.3.20"
 stdinix = "0.1.0"
